# tetris4sdl

./: Makefile.am  ProjectHome.md  config.h  config.status  configure  configure.ac  configure.scan  font.c  highscore.c  highscore.h  highscores  main.c  stuff.c  tetris.h
trunk/: Makefile  Makefile.in  TODO  aclocal.m4  config.h.in  font.h  stuff.h  tetris.c
trunk/.deps/: font.Po  highscore.Po  main.Po  stuff.Po  tetris.Po
trunk/autom4te.cache/: output.0  requests  traces.0
